<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pe.edu.upc.incident.activities.SelectActivity">

    <Button
        android:id="@+id/imageButton"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:clickable="true"
        android:onClick="onClick"
        android:padding="0dp"
        android:text="@string/textOption1"
        android:textSize="20sp"
        android:gravity="center|bottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/huppic1" />

    <Button
        android:id="@+id/imageButton2"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:layout_marginLeft="161dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:onClick="onClick"
        android:scaleType="fitXY"
        android:padding="0dp"
        android:text="@string/textOption2"
        android:textSize="20sp"
        android:gravity="center|bottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/huppic2"/>

    <Button
        android:id="@+id/imageButton3"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:background="@drawable/huppic3"
        android:clickable="true"
        android:onClick="onClick"
        android:scaleType="fitXY"
        android:padding="0dp"
        android:text="@string/textOption3"
        android:textSize="20sp"
        android:gravity="center|bottom"
        android:layout_marginTop="160dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/imageButton4"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:background="@drawable/huppic4"
        android:clickable="true"
        android:onClick="onClick"
        android:scaleType="fitXY"
        android:padding="0dp"
        android:text="@string/textOption4"
        android:textSize="20sp"
        android:gravity="center|bottom"
        android:layout_marginTop="160dp"
        android:layout_marginLeft="161dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/imageButton5"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:background="@drawable/huppic5"
        android:clickable="true"
        android:onClick="onClick"
        android:scaleType="fitXY"
        android:padding="0dp"
        android:text="@string/textOption5"
        android:textSize="20sp"
        android:gravity="center|bottom"
        android:layout_marginTop="305dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/imageButton6"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:background="@drawable/huppic6"
        android:clickable="true"
        android:onClick="onClick"
        android:scaleType="fitXY"
        android:padding="0dp"
        android:text="@string/textOption6"
        android:textSize="20sp"
        android:gravity="center|bottom"
        android:layout_marginTop="305dp"
        android:layout_marginLeft="161dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/imageButton7"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:background="@drawable/huppic7"
        android:clickable="true"
        android:onClick="onClick"
        android:scaleType="fitXY"
        android:padding="0dp"
        android:text="@string/textOption7"
        android:textSize="20sp"
        android:gravity="center|bottom"
        android:layout_marginTop="450dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/imageButton8"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:background="@drawable/huppic8"
        android:clickable="true"
        android:onClick="onClick"
        android:scaleType="fitXY"
        android:padding="0dp"
        android:text="@string/textOption8"
        android:textSize="20sp"
        android:gravity="center|bottom"
        android:layout_marginTop="450dp"
        android:layout_marginLeft="161dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
